added generic database service, update project status flow, fetch auth user request, fetch project developers, developers create on request accept, request status update flow
